--- a/appcenter/build.gradle
+++ b/appcenter/build.gradle
@@ -28,6 +28,14 @@ android {
         viewBinding true
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+    kotlinOptions {
+        jvmTarget = '11'
+    }
+
 
 }
 
