--- a/adshelper/src/main/AndroidManifest.xml
+++ b/adshelper/src/main/AndroidManifest.xml
@@ -3,6 +3,6 @@
     package="com.example.app.adshelper">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+<!--    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
 
 </manifest>
