--- a/adshelper/build.gradle
+++ b/adshelper/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'maven-publish'
 }
 
 android {
@@ -26,11 +27,11 @@ android {
         viewBinding true
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = '1.8'
     }
 }
 
@@ -52,4 +53,18 @@ dependencies {
     // For Dimension
     implementation "com.intuit.ssp:ssp-android:$sdp_ssp_version"
     implementation "com.intuit.sdp:sdp-android:$sdp_ssp_version"
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.vickypathak123'
+                artifactId = 'AndroidAppCenter'
+                version = '1.0.8'
+            }
+        }
+    }
 }
