--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
 
     // Lottie Animation
     implementation "com.airbnb.android:lottie:$lottie_version"
+
+//    implementation 'com.github.vickypathak123:AndroidAppCenter:1.0.8'
+//    implementation 'com.github.JoelKanyi:KenyanCounties:1.0.0'
 }
