--- a/adshelper/build.gradle
+++ b/adshelper/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -44,15 +44,26 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // The Google SDK for Google Ads
+    //<editor-fold desc="Multidex support">
+    implementation 'androidx.multidex:multidex:2.0.1'
+    //</editor-fold>
+
+    //<editor-fold desc="The Google SDK for Google Ads">
     implementation "com.google.android.gms:play-services-ads:$google_ads_version"
+    //</editor-fold>
 
-    // Lottie Animation
+    //<editor-fold desc="Lottie Animation">
     implementation "com.airbnb.android:lottie:$lottie_version"
+    //</editor-fold>
 
-    // For Dimension
+    //<editor-fold desc="Dimension">
     implementation "com.intuit.ssp:ssp-android:$sdp_ssp_version"
     implementation "com.intuit.sdp:sdp-android:$sdp_ssp_version"
+    //</editor-fold>
+
+    //<editor-fold desc="LifeCycle">
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    //</editor-fold>
 }
 
 afterEvaluate {
