--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.5.21'
-    ext.google_ads_version = '20.5.0'
+    ext.google_ads_version = '20.4.0'
     ext.lottie_version = '3.7.0'
     ext.sdp_ssp_version = '1.0.6'
+    ext.core_ktx_version = '1.6.0'
+    ext.appcompat_version = '1.3.1'
 
     repositories {
         google()
