Add Lifecycle Dependency

--- a/adshelper/build.gradle
+++ b/adshelper/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     //<editor-fold desc="LifeCycle">
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.4.0"
     //</editor-fold>
 }
 
