--- a/adshelper/build.gradle
+++ b/adshelper/build.gradle
@@ -71,16 +71,16 @@ dependencies {
     //</editor-fold>
 }
 
-//afterEvaluate {
-//    publishing {
-//        publications {
-//            release(MavenPublication) {
-//                from components.release
-//
-//                groupId = 'com.github.vickypathak123'
-//                artifactId = 'AndroidAppCenter'
-//                version = '1.0.8'
-//            }
-//        }
-//    }
-//}
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.vickypathak123'
+                artifactId = 'AndroidAppCenter'
+                version = '1.1.2'
+            }
+        }
+    }
+}
