--- a/base/build.gradle
+++ b/base/build.gradle
@@ -56,16 +56,16 @@ dependencies {
     implementation "org.jetbrains.anko:anko:0.10.8"
 }
 
-//afterEvaluate {
-//    publishing {
-//        publications {
-//            release(MavenPublication) {
-//                from components.release
-//
-//                groupId = 'com.github.vickypathak123'
-//                artifactId = 'AndroidAppCenter'
-//                version = '1.0.8'
-//            }
-//        }
-//    }
-//}
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.vickypathak123'
+                artifactId = 'AndroidAppCenter'
+                version = '1.1.2'
+            }
+        }
+    }
+}
